# chatstore

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
chatstore/: __init__.py  memory.py  service.py
tests/: conftest.py  test_memory.py  test_service.py
