[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "chatstore"
version = "2.0.0"
description = "Lightweight persistent chat service with optional semantic search"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["chat", "history", "llm", "memory", "semantic-search"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# v1 core dependencies only — stays lightweight
dependencies = [
    "tiktoken>=0.6",
]

[project.optional-dependencies]
# v2: semantic search support
semantic = [
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
]
# convenience: install everything
all = [
    "chatstore[semantic]",
]
# development / CI
dev = [
    "pytest>=8.0",
    "chatstore[semantic]",
]

[project.urls]
"Homepage" = "https://github.com/namankr/chatstore"
"Source Code" = "https://github.com/namankr/chatstore"
"Bug Tracker" = "https://github.com/namankr/chatstore/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["chatstore*"]

[tool.setuptools.package-data]
chatstore = ["py.typed"]
